// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render disabled item 1`] = `
<button
  class="item"
  disabled=""
>
  <span
    aria-hidden="true"
    class="icon fa fa-undefined"
  />
  <span
    class="title"
  />
</button>
`;

exports[`Render item 1`] = `
<button
  class="item"
>
  <span
    aria-hidden="true"
    class="icon fa fa-undefined"
  />
  <span
    class="title"
  />
</button>
`;
